added more panels

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-title"><span>NAVIGATION</span></li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/dashboard">Dashboard <span class="menu-icon fa fa-tachometer"></span></a>
+          <a ng-disabled="loading" href="/#/dashboard">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
           <a ng-disabled="loading" href="/#/monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
@@ -47,7 +47,7 @@
           <a ng-disabled="loading" href="/#/blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/debug">Debug <span class="menu-icon fa fa-list"></span></a>
+          <a ng-disabled="loading" href="/#/debug">MultiLookup <span class="menu-icon fa fa-list"></span></a>
         </li>
       </ul>
       <div class="sidebar-footer">
