--- a/src/index.html
+++ b/src/index.html
@@ -38,19 +38,22 @@
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-title"><span>NAVIGATION</span></li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/dashboard">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
+          <a ng-disabled="loading" href="/#/lookup">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
           <a ng-disabled="loading" href="/#/monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
         </li>
-        <li ng-if="isLoggedIn()" class="sidebar-list">
+        <li ng-if="isLoggedIn() && user.Scope=='admin super'" class="sidebar-list">
           <a ng-disabled="loading" href="/#/blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/debug">MultiLookup <span class="menu-icon fa fa-list"></span></a>
+          <a ng-disabled="loading" href="/#/multi-lookup">MultiLookup <span class="menu-icon fa fa-list"></span></a>
+        </li>
+        <li ng-if="isLoggedIn()" class="sidebar-list">
+          <a ng-disabled="loading" href="/#/admin-list">Admin List <span class="menu-icon fa fa-star"></span></a>
         </li>
       </ul>
-      <div class="sidebar-footer">
+      <div class="sidebar-footer"> 
         <div ng-if="isLoggedIn()">
           <a href ng-click="logout()">Logout of <kbd>{{ user.Name }}</kbd></a>
         </div>
