--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
       </ul>
       <div class="sidebar-footer"> 
         <div ng-if="isLoggedIn()">
-          <a href ng-click="logout()">Logout of <kbd>{{ user.Name }}</kbd></a>
+          <a href ng-click="logout()">Log out <kbd>{{ user.Name }}</kbd></a>
         </div>
       </div>
     </div>
