--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-title"><span>NAVIGATION</span></li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/lookup">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
+          <a ng-disabled="loading" href="/#/lookup/">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
           <a ng-disabled="loading" href="/#/monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
