--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,11 @@
   <style type="text/css">
   .alerts-container {
     position: fixed;
+    top: 1rem;
     right: 1rem;
-    right: 1rem;
+    cursor: pointer;
     z-index: 999;
-    opacity: .9;
+    opacity: .95;
   }
   </style>
   <ng-include src="'templates/_loaderStyle.html'"></ng-include>
