--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,16 @@
     z-index: 999;
     opacity: .95;
   }
+  .row {
+    clear: both;
+  }
+  .col {
+    float: left;
+    width: 49%;
+  }
+  .col:nth-child(1) {
+    float: right;
+  }
   </style>
   <ng-include src="'templates/_loaderStyle.html'"></ng-include>
 </head>
