--- a/src/index.html
+++ b/src/index.html
@@ -38,28 +38,28 @@
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-title"><span>NAVIGATION</span></li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/lookup/">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
+          <a ng-disabled="loading" href="#/lookup/">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
+          <a ng-disabled="loading" href="#/monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/payments">Payments <span class="menu-icon fa fa-credit-card"></span></a>
+          <a ng-disabled="loading" href="#/payments">Payments <span class="menu-icon fa fa-credit-card"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/coupons">Coupons <span class="menu-icon fa fa-money"></span></a>
+          <a ng-disabled="loading" href="#/coupons">Coupons <span class="menu-icon fa fa-money"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/invites">Invites <span class="menu-icon fa fa-gift"></span></a>
+          <a ng-disabled="loading" href="#/invites">Invites <span class="menu-icon fa fa-gift"></span></a>
         </li>
         <li ng-if="isLoggedIn() && user.Scope=='admin super'" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
+          <a ng-disabled="loading" href="#/blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/multi-lookup">MultiLookup <span class="menu-icon fa fa-list"></span></a>
+          <a ng-disabled="loading" href="#/multi-lookup">MultiLookup <span class="menu-icon fa fa-list"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="/#/admin-list">Admins <span class="menu-icon fa fa-star"></span></a>
+          <a ng-disabled="loading" href="#/admin-list">Admins <span class="menu-icon fa fa-star"></span></a>
         </li>
       </ul>
       <div class="sidebar-footer">
