--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
         <li ng-if="isLoggedIn()" class="sidebar-list">
           <a ng-disabled="loading" href="#/admin-list">Admins <span class="menu-icon fa fa-star"></span></a>
         </li>
+        <li ng-if="isLoggedIn()" class="sidebar-list">
+          <a ng-disabled="loading" href="#/partners">Partners <span class="menu-icon fa fa-university"></span></a> 
+        </li>
       </ul>
       <div class="sidebar-footer">
         <div ng-if="isLoggedIn()">
