WIP changes for 3.6

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <a ng-disabled="loading" href="#/monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
-          <a ng-disabled="loading" href="#/payments">Payments <span class="menu-icon fa fa-credit-card"></span></a>
+          <a ng-disabled="loading" href="#/reports">Reports <span class="menu-icon fa fa-credit-card"></span></a>
         </li>
         <li ng-if="isLoggedIn()" class="sidebar-list">
           <a ng-disabled="loading" href="#/coupons">Coupons <span class="menu-icon fa fa-money"></span></a>
