--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <!-- SCRIPTS -->
   <!-- build:js lib/js/main.min.js -->
   <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+  <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script type="text/javascript" src="../bower_components/papaparse/papaparse.min.js"></script>
