--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>Admin Dashboard</title>
+    <base href="/" />
     <!-- STYLES -->
     <!-- build:css lib/css/main.min.css -->
     <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -21,6 +22,8 @@
     <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-gettext/dist/angular-gettext.min.js"></script>
     <script type="text/javascript" src="../bower_components/papaparse/papaparse.min.js"></script>
     <!-- endbuild -->
     <!-- Custom Scripts -->
