--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <!-- endbuild -->
     <!-- SCRIPTS -->
     <!-- build:js lib/js/main.min.js -->
+    <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
@@ -26,6 +27,7 @@
     <script type="text/javascript" src="../bower_components/angular-notify/dist/angular-notify.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-gettext/dist/angular-gettext.min.js"></script>
     <script type="text/javascript" src="../bower_components/papaparse/papaparse.min.js"></script>
+    <script type="text/javascript" src="../bower_components/bcryptjs/dist/bcrypt.min.js"></script>
     <script
     <!-- endbuild -->
     <!-- Custom Scripts -->
