Fix missing dependency: AppModel and remove proton.utils

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <script
     <!-- endbuild -->
     <!-- Custom Scripts -->
-    <script type="text/javascript" src="js/openpgp.min.js"></script>
+    <script type="text/javascript" src="openpgp.min.js"></script>
     <script type="text/javascript" src="js/dashboard.min.js"></script>
 </head>
 
