--- a/src/index.html
+++ b/src/index.html
@@ -51,28 +51,28 @@
                 <div ng-if="isLoggedIn">
                     <li  class="sidebar-title"><span>NAVIGATION</span></li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" href="#/lookup/">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.lookup">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" href="#/monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.monitor">Monitor <span class="menu-icon fa fa-eye"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" href="#/reports">Reports <span class="menu-icon fa fa-credit-card"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.reports">Reports <span class="menu-icon fa fa-credit-card"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" href="#/coupons">Coupons <span class="menu-icon fa fa-money"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.coupons">Coupons <span class="menu-icon fa fa-money"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" href="#/invites">Invites <span class="menu-icon fa fa-gift"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.invites">Invites <span class="menu-icon fa fa-gift"></span></a>
                     </li>
                     <li ng-if="user.Scope=='admin super'" class="sidebar-list">
-                        <a ng-disabled="loading" href="#/blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" href="#/multi-lookup">MultiLookup <span class="menu-icon fa fa-list"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.multi-lookup">MultiLookup <span class="menu-icon fa fa-list"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" href="#/admin-list">Admins <span class="menu-icon fa fa-star"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.admin-list">Admins <span class="menu-icon fa fa-star"></span></a>
                     </li>
                 </div>
             </ul>
