Add CSS notification

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="../bower_components/rdash-ui/dist/css/rdash.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <!-- endbuild -->
+    <link rel="stylesheet" type="text/css" href="css/app.css">
     <!-- SCRIPTS -->
     <!-- build:js lib/js/main.min.js -->
     <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
