Improve perf gulp and fix logout process

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
             </ul>
             <div class="sidebar-footer">
                 <div ng-if="isLoggedIn">
-                    <a href ng-click="logout()">Log out <kbd>{{ user.Name }}</kbd></a>
+                    <a ui-sref="index">Log out <kbd>{{ user.Name }}</kbd></a>
                 </div>
             </div>
         </div>
