--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                         <a ng-disabled="loading" ui-sref="private.multi-lookup">MultiLookup <span class="menu-icon fa fa-list"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" ui-sref="private.admin-list">Admins <span class="menu-icon fa fa-star"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.admins">Admins <span class="menu-icon fa fa-star"></span></a>
                     </li>
                     <li ng-if="user.Scope=='admin super'" class="sidebar-list">
                         <a ng-disabled="loading" ui-sref="private.blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
