--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,11 @@
     <!-- build:js lib/js/main.min.js -->
     <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../bower_components/underscore/underscore-min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-cookies/angular-cookies.min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-resource/angular-resource.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-notify/dist/angular-notify.min.js"></script>
     <script type="text/javascript" src="../bower_components/angular-gettext/dist/angular-gettext.min.js"></script>
