Working on lookups

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                         <a ng-disabled="loading" ui-sref="private.lookup">Lookup <span class="menu-icon fa fa-tachometer"></span></a>
                     </li>
                     <li class="sidebar-list">
-                        <a ng-disabled="loading" ui-sref="private.multi-lookup">MultiLookup <span class="menu-icon fa fa-list"></span></a>
+                        <a ng-disabled="loading" ui-sref="private.multi-lookup">Multi-lookup <span class="menu-icon fa fa-list"></span></a>
                     </li>
 
                     <li class="sidebar-list">
